--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </header>
 
         <div class="about__logos">
-            <img src="assets/images/amazon-logo.png" alt="">
-            <img src="assets/images/dribble-logo.png" alt="">
-            <img src="assets/images/hubspot-logo.png" alt="">
-            <img src="assets/images/notion-logo.png" alt="">
-            <img src="assets/images/netflix-logo.png" alt="">
-            <img src="assets/images/zoom-logo.png" alt="">
+            <img src="assets/images/amazon-logo.png" alt="Amazon logo">
+            <img src="assets/images/dribble-logo.png" alt="Dribble logo">
+            <img src="assets/images/hubspot-logo.png" alt="Hubspot logo">
+            <img src="assets/images/notion-logo.png" alt="Notion logo">
+            <img src="assets/images/netflix-logo.png" alt="netflix logo">
+            <img src="assets/images/zoom-logo.png" alt="Zoom logo">
         </div>
 
     </section>
