Some changes in the service card

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="about__item"><a href="">Use Cases</a></li>
                 <li class="about__item"><a href="">Pricing</a></li>
                 <li class="about__item"><a href="">Blog</a></li>
-                <li class="about__item button button--primary"><a href="">Requested a quote</a></li>
+                <li class="button button--primary"><a href="">Requested a quote</a></li>
             </ul>
         </nav>
         <header class="about__header">
@@ -44,6 +44,76 @@
             <img src="assets/images/zoom-logo.png" alt="Zoom logo">
         </div>
 
+    </section>
+
+    <section id="services" class="service">
+        <div class="heading service__heading">
+            <h2>Services</h2>
+            <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online.
+                These services
+                include:</p>
+        </div>
+        <div class="service__container">
+            <div class="service__card service__card--bg3">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title">Search engine</h3>
+                        <h3 class="block__title">optimization</h3>
+                    </div>
+                    <div class="service__button">
+                        <div class="service__link">
+                            <img src="assets/images/arrow-green.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4>Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/search-engine-logo.png" alt="Search engine logo">
+                </div>
+            </div>
+            <div class="service__card service__card--bg2">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title block__title--bg3">Pay-per-click</h3>
+                        <h3 class="block__title block__title--bg3">advertising</h3>
+                    </div>
+                    <div class="service__button">
+                        <div class="service__link">
+                            <img src="assets/images/arrow-green.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4>Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/pay-per-logo.png" alt="Pay per logo">
+                </div>
+            </div>
+            <div class="service__card">
+
+            </div>
+            <div class="service__card">
+
+            </div>
+            <div class="service__card">
+
+            </div>
+            <div class="service__card">
+
+            </div>
+        </div>
+        <div class="service__contact">
+
+        </div>
     </section>
 </body>
 
