Use cases section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="about__logo">marketify</div>
             <ul class="about__list">
                 <li class="about__item about__item--active"><a href="">About us</a></li>
-                <li class="about__item"><a href="">Services</a></li>
-                <li class="about__item"><a href="">Use Cases</a></li>
+                <li class="about__item"><a href="#services">Services</a></li>
+                <li class="about__item"><a href="#use-cases">Use Cases</a></li>
                 <li class="about__item"><a href="">Pricing</a></li>
                 <li class="about__item"><a href="">Blog</a></li>
                 <li class="button button--primary"><a href="">Requested a quote</a></li>
@@ -48,10 +48,9 @@
 
     <section id="services" class="service">
         <div class="heading service__heading">
-            <h2>Services</h2>
-            <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online.
-                These services
-                include:</p>
+            <h2 class="block__title">Services</h2>
+            <p class="service__p">At our digital marketing agency, we offer a range of services to help businesses grow
+                and succeed online. These services include:</p>
         </div>
         <div class="service__container">
             <div class="service__card service__card--bg3">
@@ -62,12 +61,12 @@
                         <h3 class="block__title">optimization</h3>
                     </div>
                     <div class="service__button">
-                        <div class="service__link">
+                        <div class="service__link service__card--bg1">
                             <img src="assets/images/arrow-green.png" alt="Arrow link">
                         </div>
 
                         <a href="">
-                            <h4>Learn more</h4>
+                            <h4 class="service__click">Learn more</h4>
                         </a>
                     </div>
                 </div>
@@ -76,6 +75,7 @@
                     <img src="assets/images/search-engine-logo.png" alt="Search engine logo">
                 </div>
             </div>
+
             <div class="service__card service__card--bg2">
 
                 <div class="service__content">
@@ -83,13 +83,14 @@
                         <h3 class="block__title block__title--bg3">Pay-per-click</h3>
                         <h3 class="block__title block__title--bg3">advertising</h3>
                     </div>
+
                     <div class="service__button">
-                        <div class="service__link">
+                        <div class="service__link service__card--bg1">
                             <img src="assets/images/arrow-green.png" alt="Arrow link">
                         </div>
 
                         <a href="">
-                            <h4>Learn more</h4>
+                            <h4 class="service__click">Learn more</h4>
                         </a>
                     </div>
                 </div>
@@ -98,23 +99,143 @@
                     <img src="assets/images/pay-per-logo.png" alt="Pay per logo">
                 </div>
             </div>
-            <div class="service__card">
 
+            <div class="service__card service__card--bg1">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title block__title--bg3">Pay-per-click</h3>
+                        <h3 class="block__title block__title--bg3">advertising</h3>
+                    </div>
+
+                    <div class="service__button">
+                        <div class="service__link service__card--bg3">
+                            <img src="assets/images/arrow-black.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4 class="service__click service__click--c3">Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/social-media-logo.png" alt="Pay per logo">
+                </div>
             </div>
-            <div class="service__card">
 
+            <div class="service__card service__card--bg3">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title">Email</h3>
+                        <h3 class="block__title">Marketing</h3>
+                    </div>
+                    <div class="service__button">
+                        <div class="service__link service__card--bg1">
+                            <img src="assets/images/arrow-green.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4 class="service__click">Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/email-logo.png" alt="Email marketing logo">
+                </div>
             </div>
-            <div class="service__card">
 
+            <div class="service__card service__card--bg2">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title block__title--bg3">Content</h3>
+                        <h3 class="block__title block__title--bg3">Creation</h3>
+                    </div>
+
+                    <div class="service__button">
+                        <div class="service__link service__card--bg1">
+                            <img src="assets/images/arrow-green.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4 class="service__click">Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/content-logo.png" alt="Contetnt creation logo">
+                </div>
             </div>
-            <div class="service__card">
 
+            <div class="service__card service__card--bg1">
+
+                <div class="service__content">
+                    <div class="service__title">
+                        <h3 class="block__title block__title--bg3">Analysis and</h3>
+                        <h3 class="block__title block__title--bg3">Tracking</h3>
+                    </div>
+
+                    <div class="service__button">
+                        <div class="service__link service__card--bg3">
+                            <img src="assets/images/arrow-black.png" alt="Arrow link">
+                        </div>
+
+                        <a href="">
+                            <h4 class="service__click service__click--c3">Learn more</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="service__logo">
+                    <img src="assets/images/analysis-logo.png" alt="Analysis and tracking logo">
+                </div>
             </div>
         </div>
-        <div class="service__contact">
 
+        <div class="service__contact">
+            <div class="service__text">
+                <h3 class="service__h3">Let's make things happen</h3>
+                <p>Contact us today to learn more about how our digital marketing services can help your business grow
+                    and succeed online.</p>
+                <a class="button button--primary" href="">Get your free proposal</a>
+            </div>
+            <div class="service__image">
+                <img src="assets/images/service-img.png" alt="Service contact image">
+            </div>
+        </div>
+
+    </section>
+
+    <section id="use-cases" class="cases">
+        <div class="heading cases__heading">
+            <h2 class="block__title">Case Studies</h2>
+            <p class="cases__p">Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case
+                Studies</p>
+        </div>
+        <div class="cases__container">
+            <div class="cases__content">
+                <p>For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in
+                    website traffic and a
+                    25% increase in sales.</p>
+                <div class="cases__button">
+                    <h4>Learn more</h4>
+                    <img src="assets/images/arrow-green.png" alt="Arrow for link">
+                </div>
+
+            </div>
+            <div class="cases__content">
+
+            </div>
+            <div class="cases__content">
+
+            </div>
         </div>
     </section>
+
 </body>
 
 </html>
