--- a/index.html
+++ b/index.html
@@ -213,24 +213,49 @@
     <section id="use-cases" class="cases">
         <div class="heading cases__heading">
             <h2 class="block__title">Case Studies</h2>
-            <p class="cases__p">Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case
+            <p class="service__p">Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case
                 Studies</p>
         </div>
         <div class="cases__container">
             <div class="cases__content">
-                <p>For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in
-                    website traffic and a
-                    25% increase in sales.</p>
+                <p class="cases__p">For a local restaurant, we implemented a targeted PPC campaign that resulted in a
+                    50% increase in website traffic and a 25% increase in sales.</p>
                 <div class="cases__button">
-                    <h4>Learn more</h4>
+                    <a href="">
+                        <h4 class="cases__click cases__click--c2">Learn more</h4>
+                    </a>
+
                     <img src="assets/images/arrow-green.png" alt="Arrow for link">
                 </div>
 
             </div>
+            <span class="cases__divider"></span>
             <div class="cases__content">
+                <p class="cases__p">For a B2B software company, we developed an SEO strategy that resulted in a first
+                    page ranking for key keywords and a
+                    200% increase in organic traffic.</p>
+                <div class="cases__button">
+                    <a href="">
+                        <h4 class="cases__click cases__click--c2">Learn more</h4>
+                    </a>
+
+                    <img src="assets/images/arrow-green.png" alt="Arrow for link">
+                </div>
 
             </div>
+            <span class="cases__divider"></span>
+
             <div class="cases__content">
+                <p class="cases__p">For a national retail chain, we created a social media marketing campaign that
+                    increased followers by 25% and generated
+                    a 20% increase in online sales.</p>
+                <div class="cases__button">
+                    <a href="">
+                        <h4 class="cases__click cases__click--c2">Learn more</h4>
+                    </a>
+
+                    <img src="assets/images/arrow-green.png" alt="Arrow for link">
+                </div>
 
             </div>
         </div>
