--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="about__item about__item--active"><a href="">About us</a></li>
                 <li class="about__item"><a href="#services">Services</a></li>
                 <li class="about__item"><a href="#use-cases">Use Cases</a></li>
-                <li class="about__item"><a href="">Pricing</a></li>
+                <li class="about__item"><a href="#working-process">Pricing</a></li>
                 <li class="about__item"><a href="">Blog</a></li>
                 <li class="button button--primary"><a href="">Requested a quote</a></li>
             </ul>
@@ -257,6 +257,32 @@
                     <img src="assets/images/arrow-green.png" alt="Arrow for link">
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section id="working-process" class="process">
+        <div class="heading">
+            <h2 class="block__title">Our Working Process</h2>
+            <p class="service__p">Step-by-Step Guide to Achieving Your Business Goals</p>
+        </div>
+        <div class="process__container">
+            <div class="process__card">
+                <div class="process__heading">
+                    <div class="process__title">
+                        <h1 class="bold">01</h1>
+                        <h3>Consultation</h3>
+                    </div>
+                    <div onclick="" class="process__button">
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <!-- <span class="process__divider"></span>
+                <div class="process__content">
+                    <p>During the initial consultation, we will discuss your business goals and objectives, target audience, and current
+                    marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.</p>
+                </div> -->
             </div>
         </div>
     </section>
