--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketify</title>
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 
 <body>
@@ -273,20 +274,69 @@
                         <h1 class="bold">01</h1>
                         <h3>Consultation</h3>
                     </div>
-                    <div onclick="" class="process__button">
+                    <div onclick="toggleCard(this)" class="process__button">
                         <span></span>
                         <span></span>
                     </div>
                 </div>
-                <!-- <span class="process__divider"></span>
+                <span class="process__divider"></span>
                 <div class="process__content">
-                    <p>During the initial consultation, we will discuss your business goals and objectives, target audience, and current
-                    marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.</p>
-                </div> -->
+                    <p>During the initial consultation, we will discuss your business goals and objectives, target
+                        audience, and current
+                        marketing efforts. This will allow us to understand your needs and tailor our services to best
+                        fit your requirements.</p>
+                </div>
             </div>
+
+            <div class="process__card">
+                <div class="process__heading">
+                    <div class="process__title">
+                        <h1 class="bold">01</h1>
+                        <h3>Consultation</h3>
+                    </div>
+                    <div onclick="toggleCard()" class="process__button">
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <span class="process__divider"></span>
+                <div class="process__content">
+                    <p>During the initial consultation, we will discuss your business goals and objectives, target
+                        audience, and current
+                        marketing efforts. This will allow us to understand your needs and tailor our services to best
+                        fit your requirements.</p>
+                </div>
+            </div>
+
+            <div class="process__card">
+                <div class="process__heading">
+                    <div class="process__title">
+                        <h1 class="bold">01</h1>
+                        <h3>Consultation</h3>
+                    </div>
+                    <div onclick="toggleCard()" class="process__button">
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <span class="process__divider"></span>
+                <div class="process__content">
+                    <p>During the initial consultation, we will discuss your business goals and objectives, target
+                        audience, and current
+                        marketing efforts. This will allow us to understand your needs and tailor our services to best
+                        fit your requirements.</p>
+                </div>
+            </div>
+
+
+
+
+
         </div>
     </section>
 
 </body>
+
+<script src="script/script.js"></script>
 
 </html>
