--- a/index.html
+++ b/index.html
@@ -267,76 +267,12 @@
             <h2 class="block__title">Our Working Process</h2>
             <p class="service__p">Step-by-Step Guide to Achieving Your Business Goals</p>
         </div>
-        <div class="process__container">
-            <div class="process__card">
-                <div class="process__heading">
-                    <div class="process__title">
-                        <h1 class="bold">01</h1>
-                        <h3>Consultation</h3>
-                    </div>
-                    <div onclick="toggleCard(this)" class="process__button">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <span class="process__divider"></span>
-                <div class="process__content">
-                    <p>During the initial consultation, we will discuss your business goals and objectives, target
-                        audience, and current
-                        marketing efforts. This will allow us to understand your needs and tailor our services to best
-                        fit your requirements.</p>
-                </div>
-            </div>
-
-            <div class="process__card">
-                <div class="process__heading">
-                    <div class="process__title">
-                        <h1 class="bold">01</h1>
-                        <h3>Consultation</h3>
-                    </div>
-                    <div onclick="toggleCard()" class="process__button">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <span class="process__divider"></span>
-                <div class="process__content">
-                    <p>During the initial consultation, we will discuss your business goals and objectives, target
-                        audience, and current
-                        marketing efforts. This will allow us to understand your needs and tailor our services to best
-                        fit your requirements.</p>
-                </div>
-            </div>
-
-            <div class="process__card">
-                <div class="process__heading">
-                    <div class="process__title">
-                        <h1 class="bold">01</h1>
-                        <h3>Consultation</h3>
-                    </div>
-                    <div onclick="toggleCard()" class="process__button">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <span class="process__divider"></span>
-                <div class="process__content">
-                    <p>During the initial consultation, we will discuss your business goals and objectives, target
-                        audience, and current
-                        marketing efforts. This will allow us to understand your needs and tailor our services to best
-                        fit your requirements.</p>
-                </div>
-            </div>
-
-
-
-
-
-        </div>
+        <div class="process__container js-process__container"></div>
     </section>
 
 </body>
 
-<script src="script/script.js"></script>
+<script type="module" src="script/script.js"></script>
+
 
 </html>
