--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="about__item"><a href="#services">Services</a></li>
                 <li class="about__item"><a href="#use-cases">Use Cases</a></li>
                 <li class="about__item"><a href="#working-process">Pricing</a></li>
-                <li class="about__item"><a href="">Blog</a></li>
+                <li class="about__item"><a href="#blogs">Blog</a></li>
                 <li class="button button--primary"><a href="">Requested a quote</a></li>
             </ul>
         </nav>
@@ -268,6 +268,47 @@
             <p class="service__p">Step-by-Step Guide to Achieving Your Business Goals</p>
         </div>
         <div class="process__container js-process__container"></div>
+    </section>
+
+    <section id="blogs" class="blog">
+        <div class="heading">
+            <h2 class="block__title">Team</h2>
+            <p class="service__p">Meet the skilled and experienced team behind our successful digital marketing
+                strategies
+            </p>
+        </div>
+        <div class="blog__team">
+            <div class="blog__card">
+
+                <div class="blog__heading">
+                    <div class="blog__profile"></div>
+
+                    <div class="blog__content">
+                        <div class="blog__icon"></div>
+
+                        <div class="blog__name">
+                            <h4>John Smith</h4>
+                            <p>CEO and Founder</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <span class="blog__divider"></span>
+                <p>10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy</p>
+            </div>
+        </div>
+
+        <div class="heading">
+            <h2 class="block__title">Testimonials</h2>
+            <p class="service__p">Hear from Our Satisfied Clients: Read Our Testimonials to Learn More about Our Digital
+                Marketing Services
+            </p>
+        </div>
+
+        <div class="blog__testimonial">
+            <div class=""></div>
+        </div>
     </section>
 
 </body>
