--- a/index.html
+++ b/index.html
@@ -277,26 +277,8 @@
                 strategies
             </p>
         </div>
-        <div class="blog__team">
-            <div class="blog__card">
+        <div class="blog__team js-blog__team">
 
-                <div class="blog__heading">
-                    <div class="blog__profile"></div>
-
-                    <div class="blog__content">
-                        <div class="blog__icon"></div>
-
-                        <div class="blog__name">
-                            <h4>John Smith</h4>
-                            <p>CEO and Founder</p>
-                        </div>
-                    </div>
-
-                </div>
-
-                <span class="blog__divider"></span>
-                <p>10+ years of experience in digital marketing. Expertise in SEO, PPC, and content strategy</p>
-            </div>
         </div>
 
         <div class="heading">
