--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="about__item"><a href="#use-cases">Use Cases</a></li>
                 <li class="about__item"><a href="#working-process">Pricing</a></li>
                 <li class="about__item"><a href="#blogs">Blog</a></li>
-                <li class="button button--primary"><a href="">Requested a quote</a></li>
+                <li><a class="button button--primary about__button" href="">Requested a quote</a></li>
             </ul>
         </nav>
         <header class="about__header">
@@ -29,7 +29,7 @@
                     range of services
                     including SEO, PPC,
                     social media marketing, and content creation.</p>
-                <a class="button button--primary about__button" href="">Book a consultation</a>
+                <a class="button button--primary" href="">Book a consultation</a>
             </div>
             <div class="about__image">
                 <!-- <img src="assets/images/about-image.png" alt="Image for the introduction"> -->
@@ -277,9 +277,10 @@
                 strategies
             </p>
         </div>
-        <div class="blog__team js-blog__team">
 
-        </div>
+        <div class="blog-team__container js-blog-team__container"></div>
+
+        <a class="button button--primary blog-team__button" href="Display all the team button">See all team</a>
 
         <div class="heading">
             <h2 class="block__title">Testimonials</h2>
@@ -288,8 +289,42 @@
             </p>
         </div>
 
-        <div class="blog__testimonial">
-            <div class=""></div>
+        <div class="blog-testimonial__container">
+            <div class="blog-testimonial__content">
+                <div class="blog-testimonial__card">
+                    <div class="blog-testimonial__comment">
+                        <p>"We have been working with Positivus for the past year and have seen a significant increase
+                            in
+                            website traffic and leads
+                            as a result of their efforts. The team is professional, responsive, and truly cares about
+                            the
+                            success of our business.
+                            We highly recommend Positivus to any company looking to grow their online presence."</p>
+                    </div>
+                    <div class="blog-testimonial__name">
+                        <h4>John Smith</h4>
+                        <p>Marketing Director at XYZ Corp</p>
+                    </div>
+                </div>
+                <div class="blog-testimonial__card">
+                    <div class="blog-testimonial__comment">
+                        <p>"We have been working with Positivus for the past year and have seen a significant increase
+                            in
+                            website traffic and leads
+                            as a result of their efforts. The team is professional, responsive, and truly cares about
+                            the
+                            success of our business.
+                            We highly recommend Positivus to any company looking to grow their online presence."</p>
+                    </div>
+                    <div class="blog-testimonial__name">
+                        <h4>John Smith</h4>
+                        <p>Marketing Director at XYZ Corp</p>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-testimonial__slider">
+
+            </div>
         </div>
     </section>
 
