--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             We highly recommend Positivus to any company looking to grow their online presence."</p>
                     </div>
                     <div class="blog-testimonial__name">
-                        <h4>John Smith</h4>
+                        <h4>John Smith 1</h4>
                         <p>Marketing Director at XYZ Corp</p>
                     </div>
                 </div>
@@ -317,11 +317,59 @@
                             We highly recommend Positivus to any company looking to grow their online presence."</p>
                     </div>
                     <div class="blog-testimonial__name">
-                        <h4>John Smith</h4>
+                        <h4>John Smith 2</h4>
+                        <p>Marketing Director at XYZ Corp</p>
+                    </div>
+                </div>
+
+                <div class="blog-testimonial__card">
+                    <div class=" blog-testimonial__comment">
+                        <p>"We have been working with Positivus for the past year and have seen a significant increase
+                            in
+                            website traffic and leads
+                            as a result of their efforts. The team is professional, responsive, and truly cares about
+                            the
+                            success of our business.
+                            We highly recommend Positivus to any company looking to grow their online presence."</p>
+                    </div>
+                    <div class="blog-testimonial__name">
+                        <h4>John Smith 3</h4>
+                        <p>Marketing Director at XYZ Corp</p>
+                    </div>
+                </div>
+
+                <div class="blog-testimonial__card">
+                    <div class=" blog-testimonial__comment">
+                        <p>"We have been working with Positivus for the past year and have seen a significant increase
+                            in
+                            website traffic and leads
+                            as a result of their efforts. The team is professional, responsive, and truly cares about
+                            the
+                            success of our business.
+                            We highly recommend Positivus to any company looking to grow their online presence."</p>
+                    </div>
+                    <div class="blog-testimonial__name">
+                        <h4>John Smith 4</h4>
+                        <p>Marketing Director at XYZ Corp</p>
+                    </div>
+                </div>
+                <div class="blog-testimonial__card">
+                    <div class=" blog-testimonial__comment">
+                        <p>"We have been working with Positivus for the past year and have seen a significant increase
+                            in
+                            website traffic and leads
+                            as a result of their efforts. The team is professional, responsive, and truly cares about
+                            the
+                            success of our business.
+                            We highly recommend Positivus to any company looking to grow their online presence."</p>
+                    </div>
+                    <div class="blog-testimonial__name">
+                        <h4>John Smith 5</h4>
                         <p>Marketing Director at XYZ Corp</p>
                     </div>
                 </div>
             </div>
+
             <div class="blog-testimonial__slider">
 
             </div>
