--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
         <div class="blog-testimonial__container">
             <div class="blog-testimonial__content">
-                <div class="blog-testimonial__card">
+                <div id="0" class="blog-testimonial__card">
                     <div class="blog-testimonial__comment">
                         <p>"We have been working with Positivus for the past year and have seen a significant increase
                             in
@@ -306,7 +306,7 @@
                         <p>Marketing Director at XYZ Corp</p>
                     </div>
                 </div>
-                <div class="blog-testimonial__card">
+                <div id="1" class="blog-testimonial__card">
                     <div class="blog-testimonial__comment">
                         <p>"We have been working with Positivus for the past year and have seen a significant increase
                             in
@@ -322,7 +322,7 @@
                     </div>
                 </div>
 
-                <div class="blog-testimonial__card">
+                <div id="2" class="blog-testimonial__card">
                     <div class=" blog-testimonial__comment">
                         <p>"We have been working with Positivus for the past year and have seen a significant increase
                             in
@@ -338,7 +338,7 @@
                     </div>
                 </div>
 
-                <div class="blog-testimonial__card">
+                <div id="3" class="blog-testimonial__card">
                     <div class=" blog-testimonial__comment">
                         <p>"We have been working with Positivus for the past year and have seen a significant increase
                             in
@@ -353,7 +353,7 @@
                         <p>Marketing Director at XYZ Corp</p>
                     </div>
                 </div>
-                <div class="blog-testimonial__card">
+                <div id="4" class="blog-testimonial__card">
                     <div class=" blog-testimonial__comment">
                         <p>"We have been working with Positivus for the past year and have seen a significant increase
                             in
@@ -371,7 +371,13 @@
             </div>
 
             <div class="blog-testimonial__slider">
-
+                <a class="blog-testimonial__left-arrow" href=""></a>
+                <div class="blog-testimonial__navigation">
+                    <div class="blog-testimonial__stars"></div>
+                    <div class="blog-testimonial__stars"></div>
+                    <div class="blog-testimonial__stars"></div>
+                </div>
+                <a class="blog-testimonial__right-arrow" href=""></a>
             </div>
         </div>
     </section>
