--- a/index.html
+++ b/index.html
@@ -371,7 +371,11 @@
             </div>
 
             <div class="blog-testimonial__slider">
-                <a class="blog-testimonial__left-arrow" href=""></a>
+                <div class="blog-testimonial__left-arrow arrow">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <div class="blog-testimonial__navigation">
                     <div class="blog-testimonial__stars"></div>
                     <div class="blog-testimonial__stars"></div>
