--- a/index.html
+++ b/index.html
@@ -381,7 +381,11 @@
                     <div class="blog-testimonial__stars"></div>
                     <div class="blog-testimonial__stars"></div>
                 </div>
-                <a class="blog-testimonial__right-arrow" href=""></a>
+                <div class="blog-testimonial__right-arrow arrow">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
     </section>
