--- a/index.html
+++ b/index.html
@@ -293,17 +293,15 @@
             <div class="blog-testimonial__content js-blog-testimonial__content"></div>
 
             <div class="blog-testimonial__slider">
-                <div class="blog-testimonial__left-arrow arrow">
+                <div class="arrow blog-testimonial__left-arrow js-log-testimonial__left-arrow">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
-                <div class="blog-testimonial__navigation">
-                    <div class="blog-testimonial__stars"></div>
-                    <div class="blog-testimonial__stars"></div>
-                    <div class="blog-testimonial__stars"></div>
-                </div>
-                <div class="blog-testimonial__right-arrow arrow">
+
+                <div class="blog-testimonial__navigation js-blog-testimonial__navigation"></div>
+
+                <div class="arrow blog-testimonial__right-arrow js-log-testimonial__right-arrow">
                     <span></span>
                     <span></span>
                     <span></span>
