--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="about__item"><a href="#use-cases">Use Cases</a></li>
                 <li class="about__item"><a href="#working-process">Pricing</a></li>
                 <li class="about__item"><a href="#blogs">Blog</a></li>
-                <li><a class="button button--primary about__button" href="">Requested a quote</a></li>
+                <li><a class="button button--primary about__button" href="#contact-us">Requested a quote</a></li>
             </ul>
         </nav>
         <header class="about__header">
@@ -307,6 +307,56 @@
                     <span></span>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="contact-us" class="contact">
+        <div class="heading ">
+            <h2 class="block__title">Contact Us</h2>
+            <p class="service__p">Connect with Us: Let's Discuss Your Digital Marketing Needs
+            </p>
+        </div>
+
+        <div class="contact__container">
+            <form class="contact__form" action="post">
+                <div class="contact__checkbox">
+                    <div class="contact__radio">
+                        <input type="radio" name="say-hi" id="say-hi">
+                        <label for="say-hi">Say Hi</label>
+                    </div>
+                    <div class="contact__radio">
+                        <input type="radio" name="get-quote" id="get-quote">
+                        <label for="get-quote">Get a Quote</label>
+                    </div>
+
+                </div>
+
+                <div class="contact__fields">
+                    <div class="contact__field">
+                        <label for="name">Name</label>
+                        <input id="name" name="name" type="text" placeholder="Name" required>
+                    </div>
+
+                    <div class="contact__field">
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="email" placeholder="Email" required>
+
+                    </div>
+
+                    <div class="contact__field">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" id="message" rows="10" required>Message</textarea>
+
+                    </div>
+                </div>
+
+                <button class="button button--primary contact__button" type="submit">Send Message</button>
+            </form>
+            <div class="contact__logo"></div>
+        </div>
+
+        <div class="contact__footer">
+
         </div>
     </section>
 
