--- a/index.html
+++ b/index.html
@@ -311,51 +311,77 @@
     </section>
 
     <section id="contact-us" class="contact">
-        <div class="heading ">
+        <div class="heading">
             <h2 class="block__title">Contact Us</h2>
             <p class="service__p">Connect with Us: Let's Discuss Your Digital Marketing Needs
             </p>
         </div>
 
-        <div class="contact__container">
-            <form class="contact__form" action="post">
-                <div class="contact__checkbox">
-                    <div class="contact__radio">
+        <div class="contact-block__container">
+            <form class="contact-block__form" action="post">
+                <div class="contact-block__checkbox">
+                    <div class="contact-block__radio">
                         <input type="radio" name="say-hi" id="say-hi">
                         <label for="say-hi">Say Hi</label>
                     </div>
-                    <div class="contact__radio">
+                    <div class="contact-block__radio">
                         <input type="radio" name="get-quote" id="get-quote">
                         <label for="get-quote">Get a Quote</label>
                     </div>
 
                 </div>
 
-                <div class="contact__fields">
-                    <div class="contact__field">
+                <div class="contact-block__fields">
+                    <div class="contact-block__field">
                         <label for="name">Name</label>
                         <input id="name" name="name" type="text" placeholder="Name" required>
                     </div>
 
-                    <div class="contact__field">
+                    <div class="contact-block__field">
                         <label for="email">Email</label>
                         <input id="email" name="email" type="email" placeholder="Email" required>
 
                     </div>
 
-                    <div class="contact__field">
+                    <div class="contact-block__field">
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" id="message" rows="10" required>Message</textarea>
+                        <textarea id="message" name="message" id="message" rows="10" placeholder="Enter your message..."
+                            required></textarea>
 
                     </div>
                 </div>
 
-                <button class="button button--primary contact__button" type="submit">Send Message</button>
+                <button class="button button--primary contact-block__button" type="submit">Send Message</button>
             </form>
-            <div class="contact__logo"></div>
+            <div class="contact-block__logo"></div>
         </div>
 
-        <div class="contact__footer">
+        <div class="contact-footer__container">
+            <div class="contact-footer__navigation">
+                <div class="contact-footer__navigation-logo">marketify</div>
+                <ul class="contact-footer__navigation-list">
+                    <li class="contact-footer__navigation-item">About us</li>
+                    <li class="contact-footer__navigation-item">Services</li>
+                    <li class="contact-footer__navigation-item">Use Cases</li>
+                    <li class="contact-footer__navigation-item">Pricing</li>
+                    <li class="contact-footer__navigation-item">Blog</li>
+                </ul>
+                <div class="contact-footer__navigation-links">
+                    <div class="contact-footer__navigation-linkedin"></div>
+                    <div class="contact-footer__navigation-facebook"></div>
+                    <div class="contact-footer__navigation-twiter"></div>
+                </div>
+            </div>
+
+            <div class="contact-footer__contacts">
+
+            </div>
+
+            <span></span>
+
+            <div class="contact-footer__rights">
+
+            </div>
 
         </div>
     </section>
