--- a/index.html
+++ b/index.html
@@ -374,7 +374,16 @@
             </div>
 
             <div class="contact-footer__contacts">
-
+                <div class="contact-footer__contacts-content">
+                    <h4 class="block__title">Contact Us</h4>
+                    <p>Email: hamza.rafya.dev@gmail.com</p>
+                    <p>Phone: +212659-220334</p>
+                    <p>Address: Rabat, Morocco</p>
+                </div>
+                <div class="contact-footer__contacts-subscribe">
+                    <input type="email" placeholder="Email">
+                    <button class="button button--primary contact-footer__button">Subscribe to news</button>
+                </div>
             </div>
 
             <span></span>
