--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="about-us" class="about">
         <nav id="desktop-nav" class="about__nav">
-            <div class="about__logo">marketify</div>
+            <div class="about__logo">Marketify</div>
             <ul class="about__list">
                 <li class="about__item about__item--active"><a href="">About us</a></li>
                 <li class="about__item"><a href="#services">Services</a></li>
@@ -358,13 +358,13 @@
 
         <div class="contact-footer__container">
             <div class="contact-footer__navigation">
-                <div class="contact-footer__navigation-logo">marketify</div>
+                <div class="contact-footer__navigation-logo">Marketify</div>
                 <ul class="contact-footer__navigation-list">
-                    <li class="contact-footer__navigation-item">About us</li>
-                    <li class="contact-footer__navigation-item">Services</li>
-                    <li class="contact-footer__navigation-item">Use Cases</li>
-                    <li class="contact-footer__navigation-item">Pricing</li>
-                    <li class="contact-footer__navigation-item">Blog</li>
+                    <li class="contact-footer__navigation-item"><a href="">About us</a></li>
+                    <li class="contact-footer__navigation-item"><a href="">Services</a></li>
+                    <li class="contact-footer__navigation-item"><a href="">Use Cases</a></li>
+                    <li class="contact-footer__navigation-item"><a href="">Pricing</a></li>
+                    <li class="contact-footer__navigation-item"><a href="">Blog</a></li>
                 </ul>
                 <div class="contact-footer__navigation-links">
                     <div class="contact-footer__navigation-linkedin"></div>
@@ -375,21 +375,22 @@
 
             <div class="contact-footer__contacts">
                 <div class="contact-footer__contacts-content">
-                    <h4 class="block__title">Contact Us</h4>
+                    <h4 class="block__title">Contact Us:</h4>
                     <p>Email: hamza.rafya.dev@gmail.com</p>
                     <p>Phone: +212659-220334</p>
                     <p>Address: Rabat, Morocco</p>
                 </div>
-                <div class="contact-footer__contacts-subscribe">
-                    <input type="email" placeholder="Email">
+                <form class="contact-footer__contacts-subscribe" action="post">
+                    <input type="email" placeholder="Email" required>
                     <button class="button button--primary contact-footer__button">Subscribe to news</button>
-                </div>
+                </form>
             </div>
 
             <span></span>
 
             <div class="contact-footer__rights">
-
+                <p>© 2023 Marketify. All Rights Reserved.</p>
+                <a href="">Privacy Policy</a>
             </div>
 
         </div>
